--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "test": "mocha"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
     "ejs": "^2.5.6",
     "express": "^4.13.3",
-    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
+    "fetch": "^1.1.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "pg": "^7.5.0",
