--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "pg": "^7.5.0",
-    "request": "^2.88.0",
+    "request": "^2.88.0"
   },
   "engines": {
     "node": "10.11.0"
