--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "start-server": "npm start",
+    "ci": "start-server-and-test http://localhost:5000 test"
   },
   "dependencies": {
     "ejs": "^2.5.6",
@@ -34,6 +36,7 @@
   "license": "MIT",
   "devDependencies": {
     "mocha": "^5.2.0",
+    "start-server-and-test": "^1.7.4",
     "zombie": "^6.1.3"
   }
 }
