--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ci": "start-server-and-test http://localhost:5000 test"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "ejs": "^2.5.6",
     "express": "^4.13.3",
