--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "pg": "^7.5.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "signature_pad": "^3.0.0-beta.3"
   },
   "engines": {
     "node": "10.11.0"
