--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
     "ejs": "^2.5.6",
     "express": "^4.13.3",
@@ -19,7 +22,10 @@
     "fetch": "^1.1.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
-    "pg": "^7.5.0",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pg": "^7.6.0",
     "request": "^2.88.0",
     "signature_pad": "^3.0.0-beta.3"
   },
