--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.1.0",
     "ejs": "^2.5.6",
+    "ejs-mate": "^3.0.0",
     "express": "^4.13.3",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
