--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "mocha",
+    "test": "mocha --timeout 10000",
     "start-server": "npm start",
     "ci": "start-server-and-test http://localhost:5000 test"
   },
