--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^2.5.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.13.3",
+    "express-messages": "^1.0.1",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "fetch": "^1.1.0",
