add latex integration to app

--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "fetch": "^1.1.0",
+    "image-data-uri": "^2.0.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "morgan": "^1.9.1",
+    "node-latex": "^2.4.4",
+    "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.6.0",
+    "pg-copy-streams": "^1.2.0",
     "request": "^2.88.0",
     "signature_pad": "^3.0.0-beta.3"
   },
